Add mysql connection

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,4 +6,7 @@ ktor {
     application {
         modules = [ com.kurovale.ApplicationKt.module ]
     }
+    database {
+        DATABASE_URL = "jdbc:"${DATABASE_URL}
+    }
 }
